What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

September 19, 2011
+ [mickael] WIP: create a new framework to output file information
+ [mickael] WIP: remove a piece of code copy by the merge op at the wrong place
+ [mickael] WIP: begin to clean j2k_dump and some other small things
+ [mickael] WIP: enchance the new version with some bug fixes from v1 and from me
+ [mickael] WIP: add support of jp2 for new j2k_dump function and some other small stuff
+ [mickael] WIP: new image_header struct is used and enable used of cstr_info
+ [mickael] WIP: manage the case of event_mgr is not provided to setup_decoder function 
+ [mickael] WIP: insert elements from V2 framework into the trunk (add missing files). 
+ [mickael] Work In Progress: insert elements from V2 framework into the trunk. 

September 9, 2011
+ [antonin] added a new indexer functionality to the library. With the new '-jpip' option at encoding, the user can now generate a JP2 file including an XML box with the index used when browsing the image with JPIP. 

September 2, 2011
* [mickael] fixed windows nighlty crash about one missing opj_getopt() (and warning with other platform)

September 1st, 2011
! [antonin] renamed getopt.{c/h} to opj_getopt.{c/h} and forced the use of these files rather than the system ones. This fixed issue 78. Credit to Winfried.

August 31, 2011
* [mickael] fixed a segfault with fgets return value for some cases inside test function compare_dump_file()
+ [mickael] enhance the encoding test suite and remove unsued CONFIGURE_FILE into a CMakeList

August 30, 2011
+ [mickael] added first version of the encoding tests suite

August 16, 2011
+ [antonin] added NEWS, AUTHORS and THANKS files. Cosmetic changes in autotools files.
- [antonin] removed obsolete testing directory and *.nix files
* [antonin] fixed cmake support for openjpip

August 15, 2011
* [antonin] fixed a bug in autotools files that prevented libfcgi to be correctly found in some cases (patch from V.Torri).